# Pipeline-de-ETL-com-Python---Desafio-DIO-TOTVS

./: .gitignore  README.md  etl_pipeline.py  pyproject.toml
textproject/: README.md  app.py  etl_pipeline.py  requirements.txt
textproject/data/: SDW2023.csv
